fixed button flicker bug

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -5,7 +5,7 @@
   font-weight: 600;
   border-radius: 10px;
 
-  transition: all 0.05s;
+  transition: all 0.04s;
 
   &.primary {
     color: #000;
